--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,13 @@
 html,
 body {
-  padding: 20px;
+  padding: 10px;
   background-color: grey;
 }
 
 h1 {
   color: white;
+  text-align: center;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
