--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,39 @@
-html,
 body {
   padding: 10px;
-  background-color: grey;
+  background-image: url(/assets/background.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h1,
+h3 {
+  color: #ffcc03;
+  -webkit-text-stroke-color: #386abb;
+  text-align: center;
+  font-family: 'Pokemon Solid', sans-serif;
+  paint-order: stroke fill;
 }
 
 h1 {
-  color: white;
-  text-align: center;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-size: 65px;
+  letter-spacing: 0.7rem;
+  -webkit-text-stroke-width: 3px;
+}
+
+h3 {
+  font-size: 30px;
+  letter-spacing: 0.3rem;
+  -webkit-text-stroke-width: 1px;
+}
+
+h3 a {
+  color: #386abb;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  text-decoration: none;
+}
+
+h3 a:hover {
+  color: #ffcc03;
+  -webkit-text-stroke-color: #386abb;
 }
