--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,11 @@ body {
   background-size: cover;
 }
 
+@font-face {
+  font-family: Pokemon Solid;
+  src: url(/assets/fonts/PokemonSolid.ttf);
+}
+
 h1,
 h3 {
   color: #ffcc03;
